log
Thu 21 Mar 2024 09:04:38 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
61d36df
Thu 21 Mar 2024 09:05:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4a4cbb3
Thu 21 Mar 2024 09:05:41 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
6ca4744
Thu 21 Mar 2024 09:05:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a76fbf5
Thu 21 Mar 2024 09:07:50 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
62853c3
Thu 21 Mar 2024 09:10:06 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:8: error: redeclaration of ‘dato’ with no linkage
   81 |   int *dato;= (int*)first(L);
      |        ^~~~
exercises.c:80:9: note: previous declaration of ‘dato’ with type ‘int *’
   80 |    int *dato;
      |         ^~~~
exercises.c:81:13: error: expected expression before ‘=’ token
   81 |   int *dato;= (int*)first(L);
      |             ^
Compilation failed
3488a30
Thu 21 Mar 2024 09:10:21 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
18484c9
Thu 21 Mar 2024 09:11:50 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:107:4: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  107 |    destroy_stack(P3);
      |    ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b982aa7
Sat 23 Mar 2024 01:59:51 PM UTC: 
 exercises.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  3|2
total_score: 40/70
3668697
